# csUsecase

./: .gitignore  README.md  hitl_webhook.py  pyproject.toml  requirements.txt  setup.sh  streamlit_app.py
src/supporttickets/: main.py
src/supporttickets/agents/: __init__.py  gmail_agent.py
src/supporttickets/crews/support_crew/: __init__.py  support_crew.py
src/supporttickets/crews/support_crew/config/: agents.yaml  tasks.yaml
