[project]
name = "supporttickets"
version = "0.1.0"
description = "SupportTickets using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.8.1",
    "streamlit>=1.28",
    "requests>=2.28",
]

[project.scripts]
kickoff = "supporttickets.main:kickoff"
run_crew = "supporttickets.main:kickoff"
plot = "supporttickets.main:plot"
run_with_trigger = "supporttickets.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
